Fixes to ch9. Adding strike-out coverage. Oops, how did I miss that?

--- a/4T/ch9.tex
+++ b/4T/ch9.tex
@@ -156,7 +156,7 @@ She places a monitoring device on Oliver's head and starts asking him some quest
 
 ``What is your biggest dream?''
 
-``To do something that matters.''\footnote{\textbf{Suko T }Did I hear this right?  'cause that's what my notes say but my brain is like, what?? \textsubscript{11/03/12 12:07am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I'm pretty sure it wasn't that. More like, ``To do something that makes a difference'' \textsubscript{11/05/12 10:30am}}\footnote{$\rightarrow$\textbf{Rebecca S. }I like the ``evil'' response better- you should just retcon that in :) \textsubscript{11/06/12 2:29pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }changed to ``that matters'' - sorry guys! \textsubscript{11/08/12 12:23pm}}
+\hl{``To do something that matters.''}\footnote{\textbf{Suko T }Did I hear this right?  'cause that's what my notes say but my brain is like, what?? \textsubscript{11/03/12 12:07am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }I'm pretty sure it wasn't that. More like, ``To do something that makes a difference'' \textsubscript{11/05/12 10:30am}}\footnote{$\rightarrow$\textbf{Rebecca S. }I like the ``evil'' response better- you should just retcon that in :) \textsubscript{11/06/12 2:29pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }changed to ``that matters'' - sorry guys! \textsubscript{11/08/12 12:23pm}}
 
 ``How do you calculate the area of a triangle?''
 
@@ -216,11 +216,11 @@ Procedure complete, Oliver leaves Medbay.  Later, Tiburon stops by to tell him t
 
 
 
-Jonah enters as they are packing.  Oliver gives him a few more updates and hands him the letter from the Orc of Anglia  a sealed envelope, telling him to give it to Jaya if he (Oliver) doesn't come back\footnote{\textbf{Adam Kenney }(correction) \textsubscript{11/08/12 12:25pm}}\footnote{$\rightarrow$\textbf{Suko T }Oh right!  my notes just said ``letter'' and that's the only letter I remembered. \textsubscript{11/08/12 2:53pm}}.  \hl{Hayley offers Jonah a copy of the ``official'' report that Oliver prepared}\footnote{\textbf{q.google }While I'm still fuzzy on details, we should assume that Jonah memorizes it also. \textsubscript{11/28/12 12:47pm}} (the one that she and Jaya memorized before their cross examination - the one that leaves out the woman and the SAC-01 location).
+Jonah enters as they are packing.  Oliver gives him a few more updates and hands him \sout{the letter from the Orc of Anglia} \hl{a sealed envelope, telling him to give it to Jaya if he (Oliver) doesn't come back}\footnote{\textbf{Adam Kenney }(correction) \textsubscript{11/08/12 12:25pm}}\footnote{$\rightarrow$\textbf{Suko T }Oh right!  my notes just said ``letter'' and that's the only letter I remembered. \textsubscript{11/08/12 2:53pm}}.  \hl{Hayley offers Jonah a copy of the ``official'' report that Oliver prepared}\footnote{\textbf{q.google }While I'm still fuzzy on details, we should assume that Jonah memorizes it also. \textsubscript{11/28/12 12:47pm}} (the one that she and Jaya memorized before their cross examination - the one that leaves out the woman and the SAC-01 location).
 
 
 
-Hayley then asks if she can call in that favor that Jonah owes her.  She asks him to watch over Mr. Hadef (Trenton) and to help him if he can.  She hopes it won't be a big problem because he was already going to talk to Trenton about triangulation anyway.  Jonah agrees and Hayley looks very relieved and happy.  Oliver adds (to Jonah), ``and don't fall in love with him.''\footnote{\textbf{Suko T }Re-reading these summaries, this passage made me LOL considering the bromance. \textsubscript{06/19/15 4:28pm}}
+\hl{Hayley then asks if she can call in that favor that Jonah owes her.  She asks him to watch over Mr. Hadef (Trenton) and to help him if he can.  She hopes it won't be a big problem because he was already going to talk to Trenton about triangulation anyway.  Jonah agrees and Hayley looks very relieved and happy.  Oliver adds (to Jonah), ``and don't fall in love with him.''}\footnote{\textbf{Suko T }Re-reading these summaries, this passage made me LOL considering the bromance. \textsubscript{06/19/15 4:28pm}}
 
 
 
@@ -332,7 +332,7 @@ When Oliver says that he thought that his income was a discretionary allowance, 
 
 \hl{The conversation pretty much dies at this point}\footnote{\textbf{q.google }That was kind of sad.  They had begun to actually say some hard things without running away. \textsubscript{11/28/12 1:11pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }Their relationship is always at an impasse - Oliver bristles at his father's disapproval, his father despises Oliver for his failures (real and perceived).
 
-The only things I could think of off the top of my head that would fundamentally change this dynamic would be if Oliver's father fell into such dire straights that he actually needed Oliver's help (though he still might not ask for it); or if Oliver tried to ``prove himself'' yet again and actually succeeded in some way that was meaningful/very useful to his father. \textsubscript{11/28/12 2:12pm}}\footnote{$\rightarrow$\textbf{q.google }Oh I don't expect it to change easily.  It just came a lot closer to the (possibly surprising) point of mutual perspective than it has before.  What Oliver is doing might actually be something his father could be proud of.  Of course, poetic tragedy, he's not allowed to share it -- yet  his father already knows something is being kept from him, and even may know there's a good reason for it.  This is not at all the same as Oliver just not wanting to share. They actually \_could\_ talk about that -- but they are so used to not doing so they don't see it. \textsubscript{11/30/12 1:22pm}}+1+1 and Oliver is excused with a ``Sorry your mother is not here to greet you and sorry you can't stay.''
+The only things I could think of off the top of my head that would fundamentally change this dynamic would be if Oliver's father fell into such dire straights that he actually needed Oliver's help (though he still might not ask for it); or if Oliver tried to ``prove himself'' yet again and actually succeeded in some way that was meaningful/very useful to his father. \textsubscript{11/28/12 2:12pm}}\footnote{$\rightarrow$\textbf{q.google }Oh I don't expect it to change easily.  It just came a lot closer to the (possibly surprising) point of mutual perspective than it has before.  What Oliver is doing might actually be something his father could be proud of.  Of course, poetic tragedy, he's not allowed to share it -- yet  his father already knows something is being kept from him, and even may know there's a good reason for it.  This is not at all the same as Oliver just not wanting to share. They actually \_could\_ talk about that -- but they are so used to not doing so they don't see it. \textsubscript{11/30/12 1:22pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/30/12 3:55pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/27/14 12:03am}} and Oliver is excused with a ``Sorry your mother is not here to greet you and sorry you can't stay.''
 
 
 
@@ -398,7 +398,7 @@ Trenton asks why Jonah wants to know this when he has no background in it and Jo
 
 
 
-Trenton then spends considerable time trying to explain ``triangulation'' and the math behind it, using the analogy of people walking away from a common point and time taken to travel.  Jonah appears to understand the gist, but whether he gets the specifics is unclear.  The process is complicated by the fact that Trenton is not really able to keep things simple, but even more so from the effect of the ``smokes'' which are making both men rather ... mellow.  It's unclear how long the conversation lasts or whether anyone really learns anything though to all appearances both of them appear delighted.  Jonah does learn that Trenton grew up in the Academy, which begins to explain some of Trenton's behavior\footnote{\textbf{q.google }I imagine Trenton to be a lot like Zane from Eureka:
+Trenton then spends considerable time trying to explain ``triangulation'' and the math behind it, using the analogy of people walking away from a common point and time taken to travel.  Jonah appears to understand the gist, but whether he gets the specifics is unclear.  The process is complicated by the fact that Trenton is not really able to keep things simple, but even more so from the effect of the ``smokes'' which are making both men rather ... mellow.  It's unclear how long the conversation lasts or whether anyone really learns anything though to all appearances both of them appear delighted.  Jonah does learn that Trenton grew up in the Academy, which \hl{begins to explain some of Trenton's behavior}\footnote{\textbf{q.google }I imagine Trenton to be a lot like Zane from Eureka:
 
 http://eureka.wikia.com/wiki/Zane\_Donovan \textsubscript{11/28/12 2:20pm}}.
 
@@ -441,49 +441,49 @@ Oliver tries to follow Lackovich but feels too exposed to search outside.  He ge
 
 ``Yes, my sister was quite pleased... though less with the near death portion.''
 
-- Dr. Gerhauser to Jonah.
+\extraIndent{Äù- Dr. Gerhauser to Jonah.}
 
 
-
+\quotedDialog{
 ``Do I get more apple pie?''
 
 ``Don't talk.  Sorry, it's just that there's a needle under your jaw.''
+}
+\extraIndent{Äù                - Oliver and Dr. Gerhauser}
 
-                - Oliver and Dr. Gerhauser
 
-
-
+\quotedDialog{
 ``Which effect are you concerned with?''
 
 ``The drowning.''
-
-                - Dr. Gerhauser and Jonah
+}
+\extraIndent{Äù                - Dr. Gerhauser and Jonah}
 
 
 
 ``This will not be harmful to you as a person.  Not at this stage anyway.''
 
-- Dr. Gerhauser to Jonah
+\extraIndent{Äù- Dr. Gerhauser to Jonah}
 
 
 
 ``Discretionary allowances are supposed to be used \textit{with discretion}.''
 
-- Mr. Langdon to Oliver
+\extraIndent{Äù- Mr. Langdon to Oliver}
 
 
+\hl{
+``It's a little strange around here with the light and everything.''}
 
-``It's a little strange around here with the light and everything.''
-
-- Hayley\footnote{\textbf{Adam Kenney }Hahaha, I didn't catch this at the time! \textsubscript{11/08/12 12:32pm}}
+\extraIndent{Äù\hl{- Hayley}\footnote{\textbf{Adam Kenney }Hahaha, I didn't catch this at the time! \textsubscript{11/08/12 12:32pm}}}
 
 
-
+\quotedDialog{
 ``Should I learn math?  It kept us from dying.''
 
 ``Every accountant I've ever heard of would agree with you.''
-
-                - Hayley and Gillian
+}
+\extraIndent{Äù- Hayley and Gillian}
 
 
 \iffalse
@@ -501,20 +501,6 @@ THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
 	Unable to highlight for footnote: or something like this.  Sorry I was snickering too hard at the question and I missed it., unable to correctly match (exceeded acceptable limit):ExpectedI feel sorry for her.  S
 
 	Unable to highlight for footnote: Did I hear this right?  'cause that's what my notes say but my brain is like, what?? because:GivenExpected‚ÄúTo do something that matters.‚Äù‚ÄúTo do something evil.‚Äù
-
-	Unable to highlight for footnote: (correction), unable to correctly match (exceeded acceptable limit):Expectedthe letter from the Orc of Anglia  a sealed envelope, telling him to give it to Jaya if he (Oliver) doesn‚Äôt come back
-
-	Unable to highlight for footnote: Re-reading these summaries, this passage made me LOL considering the bromance. because:GivenExpectedHayley then asks if she can call in that favor that Jonah owes her.  She asks him to watch over Mr. Hadef (Trenton) and to help him if he can.  She hopes it won‚Äôt be a big problem because he was already going to talk to Trenton about triangulation anyway.  Jonah agrees and Hayley looks very relieved and happy.  Oliver adds (to Jonah), ‚Äúand don‚Äôt fall in love with him.‚ÄùHayley then asks if she can call in that favor that Jonah owes her.  She asks him to watch over Mr. Hadef (Trenton) and to help him if he can.  She hopes it won‚Äôt be a big problem because he was already going to talk to Trenton about triangulation anyway.  Jonah agrees and Hayley looks very relieved and happy.  Oliver adds, ‚Äúand don‚Äôt fall in love with him.‚Äù
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{q.google }Oh I don't expect it to change easily. ¬†It just came a lot closer to the (possibly surprising) point of mutual perspective than it has before. ¬†What Oliver is doing might actually be something his father could be proud of. ¬†Of course, poetic tragedy, he's not allowed to share it -- yet ¬†his father already knows something is being kept from him, and even may know there's a good reason for it. ¬†This is not at all the same as Oliver just not wanting to share. They actually _could_ talk about that -- but they are so used to not doing so they don't see it. \textsubscript{11/30/12 1:22pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/30/12 3:55pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/27/14 12:03am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/06/12 3:11pm}} 
-
-	Unable to understand footnote +1, too many options & none that matched +1. Optional comment markups: \footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/30/12 3:55pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{05/27/14 12:03am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/06/12 3:11pm}} 
-
-	Unable to highlight for footnote: I imagine Trenton to be a lot like Zane from Eureka:
-
-http://eureka.wikia.com/wiki/Zane_Donovan because:GivenExpectedexplain some of Trenton‚Äôs behaviorbegins to
-
-	Unable to highlight for footnote: Hahaha, I didn't catch this at the time! because:GivenExpected- Hayley‚ÄúIt‚Äôs a little strange around here with the light and everything.‚Äù -Suko as Hayley
 
 
 \fi
