--- a/4T/main.ltx
+++ b/4T/main.ltx
@@ -3,6 +3,7 @@
 \usepackage{color}
 \usepackage{soul}
 \usepackage{titlesec}
+\usepackage[normalem]{ulem}
 \setlength{\parindent}{5mm} % Default is 15pt
 \setlength{\parskip}{5mm}
 \titleformat{\chapter}[display]  {\large\filcenter}{\MakeUppercase{\chaptertitlename}~\thechapter}{0pt}{\huge}[\vspace{-40pt}]
