Clean up of highlights and quotes from ch 10

--- a/4T/ch10.tex
+++ b/4T/ch10.tex
@@ -444,7 +444,7 @@ Hayley is still agitated, and Dr. Gerhauser says, ``You should remember that it'
 
 It takes a while but Hayley eventually puts 2 and 2 together and realizes that she must have been the blond woman last time.  This upsets her.  ``Do I always go back to the same place?''
 
-``This time, we believe you did, yes,\footnote{\textbf{q.google }!!!!
+\hl{``This time, we believe you did, yes,}\footnote{\textbf{q.google }!!!!
 
 I am \_so\_ glad I hadn't read this when we played yesterday! \textsubscript{12/07/12 10:35am}}\footnote{$\rightarrow$\textbf{Rebecca S. }I gotta' say : ``Called it!'' \textsubscript{12/07/12 11:32am}}\footnote{$\rightarrow$\textbf{Suko T }Yes it was pretty clear why Nate specifically asked that these notes not be shared until after your tank sessions. \textsubscript{12/07/12 12:08pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }Rebecca, what was your theory? \textsubscript{12/08/12 7:31am}}\footnote{$\rightarrow$\textbf{Rebecca S. }The tank experience is our team mentally transporting into other bodies. Unclear of where these bodies are in time \& space.  That non-Hayley tank scenes are just us trying to mentally work our way to the ``surface''.  My opinion remains un-changed since the first tank scene \& our meeting other Tankians on that drowned mission.  I'm hoping at some point we figure out that the Tankian Jaya took prisoner is actually one of the TA team in tank mode. \textsubscript{12/27/12 8:32pm}}`` says Dr. Gerhauser.
 
@@ -659,41 +659,41 @@ Oliver 8
 \underline{  {\LARGE Quotes }  }
 
 
-
+\quotedDialog{
 ``How do you feel?'' 
 
 ``A little disappointed, but otherwise intact.'' -Adam as Oliver
-
+}
 \extraIndent{- Dr. Gerhauser and Oliver}
 
 
 
 ``We speak quite often.  We don't talk.''
 
-- Dr. Gerhauser
+\extraIndent{- Dr. Gerhauser}
 
 
-
+\quotedDialog{
 ``Your patrol group is good at certain things.'' 
 
 ``We \textit{are}??''
+}
+\extraIndent{- Dr. Gerhauser and Hayley }
 
-- Dr. Gerhauser and Hayley 
 
-
-
-``Are you alright?'' 
+\quotedDialog{
+\hl{``Are you alright?'' 
 
 ``No.''
 
 ``Do you believe that you'll be willing to proceed in the future?''
 
-``Yes.  As soon as possible, please.''\footnote{\textbf{Suko T }I feel this sums up Hayley so well. \textsubscript{11/10/12 3:48am}}
+``Yes.  As soon as possible, please.''}\footnote{\textbf{Suko T }I feel this sums up Hayley so well. \textsubscript{11/10/12 3:48am}}
+}
+\extraIndent{- Dr. Gerhauser and Hayley }
 
-- Dr. Gerhauser and Hayley 
 
-
-
+\quotedDialog{
 ``Do I always go back to the same place?''
 
 ``This time, we believe you did, yes.''
@@ -701,27 +701,8 @@ Oliver 8
 ``Is that supposed to happen?  Will I die everytime I go back?''
 
 ``The first time you went into the Tank, we had a short window of opportunity.  The woman was going to die anyway.  It may be best not to mention those things to your squadmates.''
-
-            - Hayley and Dr. Gerhauser
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: !!!!
-
-I am _so_ glad I hadn't read this when we played yesterday! because:GivenExpected“This time, we believe you did, yes,It takes a while but Hayley eventually puts 2 and 2 together and realizes that she must have been the blond woman last time.  This upsets her.
-
-	Unable to highlight for footnote: I feel this sums up Hayley so well., unable to correctly match (exceeded acceptable limit):Expected“Are you alright?” -Nate as Dr. Gerhauser
-“No.” -Suko as Hayley
-“Do you believe that you’ll be willing to proceed in the future?”
-“Yes.  As soon as possible, please.”
-
-
-\fi
+}
+\extraIndent{- Hayley and Dr. Gerhauser}
 
 \vspace{\fill}
 
