Highlight fixes and quote fixes for ch 11

--- a/4T/ch11.tex
+++ b/4T/ch11.tex
@@ -328,8 +328,8 @@ Dr. Gerhauser begins the questions.
 
 ``With who?''
 
-``A girl named L\footnote{\textbf{Suko T }Thanks, now I have that Eric Clapton song stuck in my head. \textsubscript{11/29/12 4:27pm}}\footnote{$\rightarrow$\textbf{q.google }It's probably not her real name.  Does that help? :)
-(''Layla'' means ``rapture''.) \textsubscript{11/30/12 1:54pm}}\footnote{$\rightarrow$\textbf{Suko T }Not her real name??  I'm shocked.  Shocked I tell you. ;) \textsubscript{11/30/12 2:20pm}}ayla.''
+\hl{``A girl named Layla.''}\footnote{\textbf{Suko T }Thanks, now I have that Eric Clapton song stuck in my head. \textsubscript{11/29/12 4:27pm}}\footnote{$\rightarrow$\textbf{q.google }It's probably not her real name.  Does that help? :)
+(''Layla'' means ``rapture''.) \textsubscript{11/30/12 1:54pm}}\footnote{$\rightarrow$\textbf{Suko T }Not her real name??  I'm shocked.  Shocked I tell you. ;) \textsubscript{11/30/12 2:20pm}}
 
 ``Do you have any feelings for anyone on base?''
 
@@ -478,9 +478,9 @@ Dr. Gerhauser asks how Jaya is doing and she says that she's feeling much better
 
 Dr. Gerhauser takes Jaya's blood pressure and tells her to lie down on the examination bench.  She places the cap on Jaya's head and instructs her, ``Answer with whatever comes to your head, which shouldn't be a problem for you.''
 
-``How old are you?'' begins Dr. Gerhauser.
+\hl{``How old are you?'' begins Dr. Gerhauser.
 
-``24.  I think.  I don't think I'm 25.  I know I'm not 23. I remember \underline{ \textit{that } }birthday,'' says Jaya with a grin.
+``24.  I think.  I don't think I'm 25.  I know I'm not 23. I remember }\underline{\hl{\textit{that}}}\hl{ birthday,'' says Jaya with a grin.
 
 ``Rank?''
 
@@ -556,9 +556,9 @@ Jaya counts carefully on her fingers and proudly proclaims, ``40!''
 
 ``I'm not actually going to pay you, I just wanted see what the answer to \textit{that} question was.''
 
-There is more bickering and Jaya being petulant.  Somehow she works in ``What are \underline{ \textit{you} } afraid of?''
+There is more bickering and Jaya being petulant.  Somehow she works in ``What are }\underline{\hl{ \textit{you} }}\hl{ afraid of?''
 
-``Suffocation,'' answers Dr. Gerhauser with surprising frankness.  Jaya responds with ``I'll remember that'' and they then continues with the questions.  ``How do you feel about needles?''\footnote{\textbf{Rebecca S. }Look at all these character details I don't remember coming up with... Huh... 
+``Suffocation,'' answers Dr. Gerhauser with surprising frankness.  Jaya responds with ``I'll remember that'' and they then continues with the questions.  ``How do you feel about needles?''}\footnote{\textbf{Rebecca S. }Look at all these character details I don't remember coming up with... Huh... 
 Also, that final note about Gerhauser being afraid of suffocation is muuuuuch more interesting given how Oliver got snuffed out. \textsubscript{11/17/14 5:42pm}}\footnote{$\rightarrow$\textbf{Suko T }Ooo indeed!  Very interesting. \textsubscript{11/18/14 2:52am}}
 
 ``Well I prefer the \hl{larger gauge}\footnote{\textbf{Rebecca S. }Sadly I didn't know what I was talking about during session.  Corrected it in the notes.  Large gauge =\textgreater  tiny needle.  Small gauge =\textgreater  big needle. \textsubscript{11/30/12 9:22am}}\footnote{$\rightarrow$\textbf{Suko T }Huh, I didn't know that either.  I hate it when they do the backwards thing. \textsubscript{11/30/12 11:37am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Not backwards, just the divisor. \textsubscript{05/06/15 4:24pm}}ones of course, but I can handle the smaller gauge if the end is worth it,'' says Jaya with the voice of experience.
@@ -684,7 +684,7 @@ They are led to a room they have not been in before.  There is a tank, partially
 
 
 
-Dr. Gerhauser, Swan and Micah are in the room.  Jonah and Jaya are prepped for the Tank\footnote{\textbf{Suko T }I missed most of this, so please fill in if you can. \textsubscript{11/30/12 12:15am}}.  When asked by Gerhauser, Jaya strips down, tosses a wink at Swan when she sees him looking(doesn't come out so well with her beat up face), puts on the mask, and jumps into the Tank with surprisingly little backtalk.  
+Dr. Gerhauser, Swan and Micah are in the room.  \hl{Jonah and Jaya are prepped for the Tank}\footnote{\textbf{Suko T }I missed most of this, so please fill in if you can. \textsubscript{11/30/12 12:15am}}.  When asked by Gerhauser, Jaya strips down, tosses a wink at Swan when she sees him looking(doesn't come out so well with her beat up face), puts on the mask, and jumps into the Tank with surprisingly little backtalk.  
 
 
 
@@ -705,96 +705,68 @@ Dr. Gerhauser, Swan and Micah are in the room.  Jonah and Jaya are prepped for t
  {\LARGE Quotes } 
 
 
-
+\quotedDialog{
 ``Your people are relatively short lived and experience a lot of trauma.''
 
 ``'Your' people?''
+}
+\extraIndent{-Dr. Gerhauser and Jonah}
 
--Dr. Gerhauser and Jonah
 
-
-
+\quotedDialog{
 ``What is the most interesting thing you did on Shore Leave?''
 
 ``I sold a goat.''
-
-        -Dr. Gerhauser and Jonah
+}
+\extraIndent{-Dr. Gerhauser and Jonah}
 
 
 
 ``Good to see you're alive, Constable....Constable.''
 
-        -Jaya
+\extraIndent{-Jaya}
 
 
-
+\quotedDialog{
 ``Did you have a fight with a wall?''
 
 ``A wall of idiots!''
+}
+\extraIndent{        -Jonah and Jaya}
 
-        -Jonah and Jaya
 
-
-
+\quotedDialog{
 ``I don't think you want to drink this, Chief.''
 
 ``I think I do.''
-
-        -Jonah and Jaya
+}
+\extraIndent{        -Jonah and Jaya}
 
 
 
 ``I love fighting but they were no good at it!  It was like punching 5 year olds!  Er, not that I punched any 5 year olds.  Just their parents.  They weren't even trying. I mean some of them brought boards but they didn't even have nails in them!''
 
--Jaya, indignantly.
+\extraIndent{-Jaya, indignantly.}
 
 
-
+\quotedDialog{
 ``You don't know if you were breathing air?''
 
 ``Yes.''
+}
+\extraIndent{ -Jonah and Hayley}
 
-        -Jonah and Hayley
 
-
-
+\quotedDialog{
 ``But Oliver's in a coma.''
 
 ``No, he's just sleeping!''
 
 ``What's the difference?''
-
-        -Jonah and Hayley
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: Thanks, now I have that Eric Clapton song stuck in my head. because:GivenExpected“A girl named L“Layla”
-
-	Unable to highlight for footnote: Look at all these character details I don't remember coming up with... Huh... 
-Also, that final note about Gerhauser being afraid of suffocation is muuuuuch more interesting given how Oliver got snuffed out. because:GivenExpected“Suffocation,” answers Dr. Gerhauser with surprising frankness.  Jaya responds with “I’ll remember that” and they then continues with the questions.  “How do you feel about needles?”“How old are you?” begins Dr. Gerhauser.
-“24.  I think.  I don’t think I’m 25.  I know I’m not 23. I remember that birthday,” says Jaya with a grin.
-“Rank?”
-“Senior Constable Jaya Parvadi.”
-“Do you have any brothers and sisters?”
-“Alive?  Or just the ones I talk to?  I have two sisters but I don’t talk to one of them, she’s a bitch.  I had three brothers but they went away a long time ago and are dead.  Well, two of them are definitely dead, don’t know about the third. Probably dead.”
-“When did you join the TA?”
-“6 years ago,” but as the lie is detected she amends it “Maybe 5?  Ugh.  Feels like longer.”
-“Are you sexually active?”
-“Yes.”
-“When?”
-“Umm.... I don’t remember two nights ago, so I can’t be sure.  Definitely 3 nights ago and 4 days ago,” Jaya says, attempting a conspiratorial wink that Dr. Gerhauser ignores.
-“Was it a regular partner?”
-“It happened twice, is that regular?  I might see him again if I go b…
-
-	Unable to highlight for footnote: I missed most of this, so please fill in if you can. because:GivenExpectedJonah and Jaya are prepped for the TankSwan preps Jaya for the Tank
+}
+\extraIndent{-Jonah and Hayley}
 
 
-\fi
 
 \vspace{\fill}
 
