Fixing ch12 quotes

--- a/4T/ch12.tex
+++ b/4T/ch12.tex
@@ -466,49 +466,49 @@ Jonah: 9
 
 ``So my sister is kind of winning the fight.  I would like to tackle the problem of making Jaya win the fight.''
 
-        -Rebecca
+\extraIndent{        -Rebecca}
 
 
-
+\quotedDialog{
 ``You need to calm down!'' 
 
 ``Calm down?  Calm down??  You probably killed that guy!''
 
 ``Er, he was like that before.''
+}
+\extraIndent{        -Jaya and Jayce}
 
-        -Jaya and Jayce
 
-
-
+\quotedDialog{
 ``I hit him in the tummy!''
 
 ``I see that someone hasn't been reading Dr. Gerhauser's Anatomy books.''
+}
+\extraIndent{        -Rebecca and Adam}
 
-        -Rebecca and Adam
 
-
-
+\quotedDialog{
 ``Am I naked?''
 
 ``You're unconscious.  You should have thought about that earlier.''
-
-        -Rebecca and Nate
+}
+\extraIndent{        -Rebecca and Nate}
 
 
 
 ``Your reaction is unusually orthogonal.''
 
-        -Dr. Gerhauser
+\extraIndent{        -Dr. Gerhauser}
 
 
-
+\quotedDialog{
 ``Welcome back!  I changed your bed, it was....soggy.''
 
 ``What happened?''
 
 ``I don't want to know.''
-
-        -Hayley and Oliver
+}
+\extraIndent{        -Hayley and Oliver}
 
 
 
