Fixing highlights, quotes, and a comment for ch13

--- a/4T/ch13.tex
+++ b/4T/ch13.tex
@@ -129,11 +129,11 @@ Jonah thinks.  ``\hl{I have limited experience with machines like this.  I don't
 
 ``I think they chose her because she's docile.''
 
-``She almost got herself killed-''
+\hl{``She almost got herself killed-''
 
 ``She didn't die, I did,'' points out Oliver.
 
-``Yeah okay,'' says Jonah a little dismissively, ``but I still think I'll ask Hayley.''\footnote{\textbf{Suko T }My notes are very thin on this part- all I remember for sure is that Jonah somewhat blewoff/downplayed/discounted Oliver's dying and that didn't go over so well. :D \textsubscript{12/30/12 10:57pm}}\footnote{$\rightarrow$\textbf{q.google }It was not intended to be dismissive.  It really wasn't: Jonah is quite sensitive about almost dying.  But the key here is in the \_almost\_.  Jonah would like that to continue to be part of the sentence. \textsubscript{01/27/13 11:26am}}
+``Yeah okay,'' says Jonah a little dismissively, ``but I still think I'll ask Hayley.''}\footnote{\textbf{Suko T }My notes are very thin on this part- all I remember for sure is that Jonah somewhat blewoff/downplayed/discounted Oliver's dying and that didn't go over so well. :D \textsubscript{12/30/12 10:57pm}}\footnote{$\rightarrow$\textbf{q.google }It was not intended to be dismissive.  It really wasn't: Jonah is quite sensitive about almost dying.  But the key here is in the \_almost\_.  Jonah would like that to continue to be part of the sentence. \textsubscript{01/27/13 11:26am}}
 
 ``Yeah, good luck with that,'' says Oliver shortly and walks away.
 
@@ -240,39 +240,7 @@ Hayley goes to speak to Jari and asks him if he can teach her how to keep \hl{tr
 
 \sceneHeadline{Bunk \& New Exercise Room}
 
-Everyone congregates into the bunk room and Jaya comes in, excited to show off the new space that she's found for us.  She says that she gets to choose our next mission and that she got us more Shore Leave that we can take immediately.  The team explores the new exercise room a bit.  \hl{Oliver and Jonah keep their counsel}\footnote{\textbf{Suko T }I recall something about Oliver not being terribly impressed with the space and not thinking it would be that useful to him. \textsubscript{01/01/13 10:13pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }Yeah... gimpy boy pouting because he can't run circles here like everyone else... also, he pointed out he already has his pool thing that works just fine thank-you-very-much \textsubscript{01/03/13 9:43am}}\footnote{$\rightarrow$\textbf{Adam Kenney }I think Oliver was pissed that Jaya got to choose the next mission.  As his issues with command hierarchies continue to evolve in delightful ways! \textsubscript{01/03/13 9:04pm}}\footnote{$\rightarrow$\textbf{q.google }Pissed that she got to choose \_at all\_? \textsubscript{01/27/13 11:35am}}Well, that we weren't consulted. 
- 
-On Sunday, January 27, 2013, q.google (Google Docs) wrote: 
- 
-\textgreater  q.google replied to a comment on (4T) Session 13 Notes 2012.12.27 
-\textgreater  {[}image: Suko T{]} 
-\textgreater  *Suko T* 
-\textgreater  Oliver and Jonah keep their counsel 
-\textgreater  
-\textgreater  I recall something about Oliver not being terribly impressed with the 
-\textgreater  space and not thinking it would be that useful to him. 
-\textgreater  {[}image: Rebecca S.{]} 
-\textgreater  *Rebecca S.* 
-\textgreater  
-\textgreater  Yeah... gimpy boy pouting because he can't run circles here like everyone 
-\textgreater  else... also, he pointed out he already has his pool thing that works just 
-\textgreater  fine thank-you-very-much 
-\textgreater  {[}image: Adam Kenney{]} 
-\textgreater  *Adam Kenney* 
-\textgreater  
-\textgreater  I think Oliver was pissed that Jaya got to choose the next mission. As his 
-\textgreater  issues with command hierarchies continue to evolve in delightful ways! 
-\textgreater  {[}image: q.google{]} 
-\textgreater  *q.google* 
-\textgreater  
-\textgreater  Pissed that she got to choose *at all*? 
-\textgreater  You received this email because you are mentioned in this thread.Changewhat Google Docs sends you.You 
-\textgreater  can reply to this email to reply to the comment. 
-\textgreater  
- 
- 
---  
-    Adam but Hayley is visibly thrilled to finally have an exercise space.  Jaya takes off to go to the Ops room, and Oliver leaves soon after to go speak with Agent Morgan.
+Everyone congregates into the bunk room and Jaya comes in, excited to show off the new space that she's found for us.  She says that she gets to choose our next mission and that she got us more Shore Leave that we can take immediately.  The team explores the new exercise room a bit.  \hl{Oliver and Jonah keep their counsel}\footnote{\textbf{Suko T }I recall something about Oliver not being terribly impressed with the space and not thinking it would be that useful to him. \textsubscript{01/01/13 10:13pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }Yeah... gimpy boy pouting because he can't run circles here like everyone else... also, he pointed out he already has his pool thing that works just fine thank-you-very-much \textsubscript{01/03/13 9:43am}}\footnote{$\rightarrow$\textbf{Adam Kenney }I think Oliver was pissed that Jaya got to choose the next mission.  As his issues with command hierarchies continue to evolve in delightful ways! \textsubscript{01/03/13 9:04pm}}\footnote{$\rightarrow$\textbf{q.google }Pissed that she got to choose \_at all\_? \textsubscript{01/27/13 11:35am}}\footnote{$\rightarrow$\textbf{Adam Kenney }Well, that we weren't consulted. \textsubscript{01/27/13 }}but Hayley is visibly thrilled to finally have an exercise space.  Jaya takes off to go to the Ops room, and Oliver leaves soon after to go speak with Agent Morgan.
 
 
 \sceneHeadline{Ops}
@@ -365,7 +333,7 @@ Meanwhile, Hayley and Jonah are still in the exercise room.  Hayley is pacing th
 
 
 
-Seemingly out of the blue, Hayley asks if Jonah knows much about Senators and mentions that it would be useful if our squad shared what we knew and talked about it since it seems like they are important to what is going on.  Jonah seems surprised at the question and motivation behind it but approves of the idea.\footnote{\textbf{Suko T }added this in, forgot about it the first time through the notes.  Poor Jonah, no witnesses to Hayley making a team strategy suggestion. :D \textsubscript{01/03/13 2:19am}}\footnote{$\rightarrow$\textbf{q.google }Why do you think Jonah \_wants\_ witnesses? \textgreater ;) \textsubscript{01/27/13 11:52am}}
+\hl{Seemingly out of the blue, Hayley asks if Jonah knows much about Senators and mentions that it would be useful if our squad shared what we knew and talked about it since it seems like they are important to what is going on.  Jonah seems surprised at the question and motivation behind it but approves of the idea.}\footnote{\textbf{Suko T }added this in, forgot about it the first time through the notes.  Poor Jonah, no witnesses to Hayley making a team strategy suggestion. :D \textsubscript{01/03/13 2:19am}}\footnote{$\rightarrow$\textbf{q.google }Why do you think Jonah \_wants\_ witnesses? \textgreater ;) \textsubscript{01/27/13 11:52am}}
 
 
 
@@ -633,55 +601,6 @@ Hayley
 
 Constable Trainee
 
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: My notes are very thin on this part- all I remember for sure is that Jonah somewhat blewoff/downplayed/discounted Oliver's dying and that didn't go over so well. :D because:GivenExpected“Yeah okay,” says Jonah a little dismissively, “but I still think I’ll ask Hayley.”“She almost got herself killed-”
-“She didn’t die, I did,” points out Oliver.
-“Okay,” says Jonah, “but I still think I’ll ask Hayley.”
-
-	Unable to find a matching comment for footnote: Well, that we weren't consulted. 
- 
-On Sunday, January 27, 2013, q.google (Google Docs) wrote: 
- 
-> q.google replied to a comment on (4T) Session 13 Notes 2012.12.27 
-> [image: Suko T] 
-> *Suko T* 
-> Oliver and Jonah keep their counsel 
-> 
-> I recall something about Oliver not being terribly impressed with the 
-> space and not thinking it would be that useful to him. 
-> [image: Rebecca S.] 
-> *Rebecca S.* 
-> 
-> Yeah... gimpy boy pouting because he can't run circles here like everyone 
-> else... also, he pointed out he already has his pool thing that works just 
-> fine thank-you-very-much 
-> [image: Adam Kenney] 
-> *Adam Kenney* 
-> 
-> I think Oliver was pissed that Jaya got to choose the next mission. As his 
-> issues with command hierarchies continue to evolve in delightful ways! 
-> [image: q.google] 
-> *q.google* 
-> 
-> Pissed that she got to choose *at all*? 
-> You received this email because you are mentioned in this thread.Changewhat Google Docs sends you.You 
-> can reply to this email to reply to the comment. 
-> 
- 
- 
---  
-    Adam
-
-	Unable to highlight for footnote: added this in, forgot about it the first time through the notes.  Poor Jonah, no witnesses to Hayley making a team strategy suggestion. :D because:GivenExpectedSeemingly out of the blue, Hayley asks if Jonah knows much about Senators and mentions that it would be useful if our squad shared what we knew and talked about it since it seems like they are important to what is going on.  Jonah seems surprised at the question and motivation behind it but approves of the idea.Hayley asks if Jonah knows much about Senators and mentions that it would be useful if our squad shared what we knew and talked about it since it seems like they are important to what is going on.  Jonah seems surprised at the somewhat random question but approves of the idea.
-
-
-\fi
 
 \vspace{\fill}
 
