Fixing hl in ch14

--- a/4T/ch14.tex
+++ b/4T/ch14.tex
@@ -636,7 +636,7 @@ Jaya's shoulders slump and she stops trying to make a break for it.
 
 ``If she is clear that she is to report to me, and follow my orders, then we will have no problems.''
 
-``I will sign off on this, and I will make the situation clear to her,\footnote{\textbf{Suko T }I feel like there was some other comment, some sort of warning about how Jaya better not misuse/abuse this additional personnel or something, but I have nothing in my notes. \textsubscript{01/25/13 4:58pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Morgan avoided saying that Lackovich would be under her command, but said she'd make the situation clear to Lackovich. \textsubscript{01/25/13 10:04pm}}``  Morgan says and dismisses Jaya to Jaya's relief.
+\hl{``I will sign off on this, and I will make the situation clear to her,}\footnote{\textbf{Suko T }I feel like there was some other comment, some sort of warning about how Jaya better not misuse/abuse this additional personnel or something, but I have nothing in my notes. \textsubscript{01/25/13 4:58pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Morgan avoided saying that Lackovich would be under her command, but said she'd make the situation clear to Lackovich. \textsubscript{01/25/13 10:04pm}}``  Morgan says and dismisses Jaya to Jaya's relief.
 
 
 
@@ -791,16 +791,6 @@ The Covered Road (Green)
 The Bad Road (Red)
 
 
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: I feel like there was some other comment, some sort of warning about how Jaya better not misuse/abuse this additional personnel or something, but I have nothing in my notes. because:GivenExpectedI will make the situation clear to her,I will make that clear to her,
-
-
-\fi
 
 \vspace{\fill}
 
